Fix too large display on big screens

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -13,6 +13,7 @@
 
   @screen md {
     @apply sticky h-20;
+    @apply w-auto;
 
     .nav-primary {
       @apply text-vw;
